Fix dark mode for Skull King & Undergrove

--- a/src/css/games/undergrove.less
+++ b/src/css/games/undergrove.less
@@ -28,13 +28,15 @@
 	}
 
 	#goals,
-	#playerhand {
+	#playerhand,
+	#playertiles {
 		background: var(--dark-back);
 		color: #517b5b;
 		outline: 4px solid #517b5b;
 	}
 
-	#carbontrack {
+	#carbontrack,
+	#scorepad {
 		outline: 4px solid #517b5b;
 	}
 }
